Reduserer antall brev med etterlysning av IM